--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,10 +1,1 @@
-/ChangeCalculator.class
-/DontForgetTheLyrics.class
-/FruitQuiz.class
-/HappyPet.class
-/PiAloud.class
-/SimpleCalculator.class
-/SleepyHead.class
-/StringMethods1.class
-/StringMethods2.class
-/robot.jar
+/FreshPrince2.wav
