--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,11 @@
+/ChangeCalculator.class
+/DontForgetTheLyrics.class
 /FreshPrince2.wav
+/FruitQuiz.class
+/HappyPet.class
+/PiAloud.class
+/SimpleCalculator.class
+/SleepyHead.class
+/StringMethods1.class
+/StringMethods2.class
+/robot.jar
